--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ Jinja2==3.1.2
 Werkzeug==3.0.0
 itsdangerous==2.1.2
 certifi==2023.7.22
-MarkupSafe==2.1.3APScheduler==3.10.4
+MarkupSafe==2.1.3
+APScheduler==3.10.4
 blinker==1.6.3
 certifi==2023.7.22
 click==8.1.7
